2008-07-30 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- added environment 'pgfplotsinterruptdatabb'
	- fixed bug in |minor tick num|

2008-07-29 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- added |xtick pos| and |ytick pos| keys and |[xy]ticklabel pos|


2008-07-28 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- fixed bug in 'plot table' optimization: did not allow for 'alias'ed
	columns.

2008-07-26 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- improved manual
	- provided better default key-paths such that '/pgfplots' can be omitted
	in many places.
	- Added \label / \ref support. Now, single plots can be referenced and
	\ref{label} inserts the associated legend image.

2008-07-25 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- markers are now drawn separately, after the clipped range. Instead of
	clipping their *paths*, their positions are clipped: a marker is either
	drawn completely or not at all.
	- The option 'clip marker paths' can be used for backwards compatibility
	- added |axis on top| key for area plots: in this case, axis descriptions
	are drawn on top of plot graphics.

2008-07-24 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- Now, plot table{<file>} has linear runtime.
	- implemented fast low-level lists also for errorbars.

2008-07-18 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- I worked on the coordinate lists and finally got linear runtime.
	In fact, the idea of Till turned out to be the most effective one (although 
	it is only preasymtotically linear).
	- This makes the aftergroup-stack variable unnecessary. 
	- Some aspects are missing,	but I hope I can fix them soon.

2008-07-16 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- replaced tikz-drawing commands for plots with basic layer commands.
	Gain: about 12% faster than before!
	- added |use aftergroup stack as fast list| to allow O(N) time for large scale plot