@@ -260,7 +260,12 @@
 	\ifx#1\pgfutil@empty
 		\pgfplotslistemptytrue
 	\else
-		\pgfplotslistemptyfalse
+		\ifx#1\relax
+			\pgfplots@warning{WARNING: possible logic error in script code: the command \string\pgfplotslistcheckempty{\string#1} encountered an undefined argument.}%
+			\pgfplotslistemptytrue
+		\else
+			\pgfplotslistemptyfalse
+		\fi
 	\fi
 }
 
