@@ -2360,8 +2360,6 @@
 % parser routines - it does NOT know that any numbers are already in
 % TeX-precision!
 %
-% FIXME : configure pgfplots to finish the data scaling trafo! It's
-% perfectly ok if it is simply the identity!
 \long\def\pgfplots@addplotimpl@expression#1(#2,#3)#4;{%
 	\pgfplots@PREPARE@COORD@STREAM{#1}{#4}%
 	%
