@@ -2,6 +2,7 @@
 
 	- added environment 'pgfplotsinterruptdatabb'
 	- fixed bug in |minor tick num|
+	- fixed bug in alias feature of table package.
 
 2008-07-29 Christian Feuersaenger <ludewich@users.sourceforge.net>
 
